...
                                    <outlet property="dataSource" destination="jv0-bs-SgV" id="c55-Kg-zv6"/>
                                    <outlet property="delegate" destination="jv0-bs-SgV" id="1AC-gA-ZJW"/>
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dir-gg-5Pw">
                                <rect key="frame" x="145" y="30" width="30" height="42"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonGoToAddScreen"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="+">
                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="pressedAdd:" destination="jv0-bs-SgV" eventType="touchUpInside" id="MDR-vC-q3B"/>
...
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nasa-apod-10-21-2015" translatesAutoresizingMaskIntoConstraints="NO" id="Kkk-QC-Stp">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                    </imageView>
                                    <textField opaque="NO" clipsSubviews="YES" alpha="0.80000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Hu-7C-fK3">
                                        <rect key="frame" x="40" y="269" width="240" height="30"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="textFieldAddItem"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="7mx-Tw-NTj"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <outlet property="delegate" destination="VdA-Ks-CPN" id="3hM-OF-700"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" alpha="0.59999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sJA-qh-iDh">
                                        <rect key="frame" x="145" y="309" width="30" height="30"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buttonAddConfirm"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="fz0-fR-6hA"/>
                                            <constraint firstAttribute="height" constant="30" id="hrL-EN-LIz"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
                                        <state key="normal" title="+">
...
